[package]
name = "ctf-brute"
version = "0.1.0"
edition = "2021"
authors = ["Jovan Pavlovic"]
description = "Brute-force utilities for Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
logos = "0.12.1"
nonempty = "0.8.0"
