[package]
name = "ctf-brute"
version = "0.2.1"
edition = "2021"
authors = ["Jovan Pavlovic"]
description = "Brute-force utilities for Rust."
license = "MIT"
homepage = "https://github.com/rust-ctf/ctf-brute"
repository = "https://github.com/rust-ctf/ctf-brute"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
logos = "0.12.1"
nonempty = "0.8.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "pattern_benchmark"
harness = false